chore: new post

--- a/_posts/2025-11-04-react-native-2025.md
+++ b/_posts/2025-11-04-react-native-2025.md
@@ -3,14 +3,14 @@ layout: post
 title: "React Native in 2025: Latest Features, Updates, and Best Practices"
 subtitle: A Comprehensive Guide to What's New in React Native and Modern Development Practices
 tags: [React Native, Mobile Development, JavaScript, Cross-Platform, React Native 0.82]
-thumbnail-img: /assets/img/post/react-native-2025/react-native-2025.jpg
-share-img: /assets/img/post/react-native-2025/react-native-2025.jpg
+thumbnail-img: /assets/img/post/react-native-2025/react-native-2025.png
+share-img: /assets/img/post/react-native-2025/react-native-2025.png
 comments: true
 mathjax: false
 author: Rajan Maharjan
 ---
 
-![React Native in 2025](/assets/img/post/react-native-2025/react-native-2025.jpg)
+![React Native in 2025](/assets/img/post/react-native-2025/react-native-2025.png)
 
 React Native has continued to evolve significantly since its early days, and 2025 brings exciting new features, performance improvements, and development tools that make building cross-platform mobile applications even more powerful and efficient. In this comprehensive guide, we'll explore the latest updates in React Native, the new features developers are excited about, and best practices for building modern mobile applications.
 
